tests/invalid_programs/println1.jas
// println expects a single argument.

println();
